--- a/package.json
+++ b/package.json
@@ -11,8 +11,14 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
+    "animate.css": "^4.1.1",
+    "bootstrap": "^5.3.8",
+    "jquery": "^3.7.1",
+    "lightbox2": "^2.11.5",
+    "owl.carousel": "^2.3.4",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "wowjs": "^1.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
