--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "owl.carousel": "^2.3.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-owl-carousel": "^2.3.3",
+    "react-slick": "^0.31.0",
+    "slick-carousel": "^1.8.1",
     "wowjs": "^1.1.3"
   },
   "devDependencies": {
