--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^19.1.1",
     "react-owl-carousel": "^2.3.3",
     "react-slick": "^0.31.0",
+    "simple-react-lightbox": "^3.6.8",
     "slick-carousel": "^1.8.1",
     "wowjs": "^1.1.3"
   },
