--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "react-countup": "^6.5.3",
     "react-dom": "^19.1.1",
     "react-owl-carousel": "^2.3.3",
+    "react-router-dom": "^7.9.5",
     "react-slick": "^0.31.0",
     "simple-react-lightbox": "^3.6.8",
     "slick-carousel": "^1.8.1",
+    "swiper": "^12.0.3",
     "wowjs": "^1.1.3"
   },
   "devDependencies": {
